--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
     	<groupId>com.amazon.alexa</groupId>
     	<artifactId>alexa-skills-kit</artifactId>
-    	<version>1.1</version>
+    	<version>1.2</version>
     </dependency>
     <dependency>
     	<groupId>com.amazonaws</groupId>
@@ -50,6 +50,21 @@
     	<groupId>org.jsoup</groupId>
     	<artifactId>jsoup</artifactId>
     	<version>1.8.3</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.directory.studio</groupId>
+    	<artifactId>org.apache.commons.io</artifactId>
+    	<version>2.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.3.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-annotations</artifactId>
+    	<version>2.3.2</version>
     </dependency>
   </dependencies>
 </project>
